samples/_failures_safe/1761317534_8f294a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5318407.c: In function ‘main’:
./samples/SAFE/__tmp_f5318407.c:156:23: error: expected ‘;’ at end of input
  156 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_f5318407.c:156:17: error: expected declaration or statement at end of input
  156 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_f5318407.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5318407.c:156:17: error: expected declaration or statement at end of input
